argocd/external-services/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-tautulli
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 30047
