argocd/external-services/tautulli/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-tautulli
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-tautulli
        port: 30047
      middlewares:
        - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: ext-cert-tautulli
